<resources>
    <string name="_000_0000_0000">000 0000 0000</string>
    <string name="_1">+1</string>
    <string name="_10_00">$ 10.00</string>
    <string name="_10_00_">10.00$</string>
    <string name="_10_00_n20_00">10.00$\n20.00$</string>
    <string name="_20_00">$ 20.00</string>
    <string name="_50">50%</string>
    <string name="_710_east_9_st_214_hialeah_fl_33010_nchanged_02_07_2023">710 East 9 ST, 214 Hialeah, FL 33010 \nChanged: 02/07/2023</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="all">All</string>
    <string name="amount">Amount</string>
    <string name="amount_paid_nprice_service">Amount Paid:\nPrice Service:</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="annual_reports">Annual Reports:</string>
    <string name="app_design">App Design</string>
    <string name="app_name">GoDjango Services</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apr_30_2024">Apr 30. 2024</string>
    <string name="are_you_sure_want_to_ndelete_the_service">Are you sure want to\ndelete the service?</string>
    <string name="authorized_person_s_detail">Authorized Person(s) Detail:</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="branding">Branding</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel2">Cancel</string>
    <string name="carlos_juan_nsanchez_perez_ncarlosjuansp_gmail_com_npaypal_n_1_523_254_5489_nunited_states">Carlos Juan\nSanchez Perez\ncarlosjuansp@gmail.com\nPayPal\n+1 523 254 5489\nUnited States</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="country">Country</string>
    <string name="define_roundedimageview" />
    <string name="description">Description:</string>
    <string name="dest_title">destination title</string>
    <string name="detail_by_entity_name">Detail by Entity Name:</string>
    <string name="document_number_nfe_ein_number_ndate_field_neffective_date_nstate_nstatus">Document Number \nFE/EIN Number \nDate Field \nEffective Date \nState \nStatus</string>
    <string name="email_address">Email Address</string>
    <string name="enter_a_email">Enter a email</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_your_email">Enter your email*</string>
    <string name="enter_your_password">Enter your password*</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="filed_date">Filed Date</string>
    <string name="filing_information">Filing Information:</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="florida_limited_liability_company_ngodjango_liabilidad_compailidad_company">Florida Limited Liability Company \nGoDjango Liabilidad Compailidad Company</string>
    <string name="forget_password">Forget Password?</string>
    <string name="godjango">GoDjango</string>
    <string name="guest">Guest</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home">Home</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="interfaces">Interface</string>
    <string name="item_view_role_description">Tab</string>
    <string name="l22000314666_n88_3678968_n07_14_2022_n07_14_2022_nfl_nactive">L22000314666 \n88–3678968 \n07/14/2022 \n07/14/2022 \nFL \nACTIVE</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Last Name*</string>
    <string name="lib_name">Filament Android</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="login_in">Login</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="mailing_address">Mailing Address:</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_24h_suffix">%1$s hours</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="medina_espinoza_itsel_1150_west_79th_st_147_b_hialeah_nfl_33014">Medina Espinoza, Itsel 1150 West 79th ST 147 B Hialeah \nFL 33014</string>
    <string name="name_amp_address_n_ntitle_ambr_n_nherrera_sosa_enrique_2741_west_79th_st_147_b_hialeah_fl_33016">Name &amp; Address \n\nTitle AMBR\n\nHerrera Sosa, Enrique 2741 West 79th ST 147 B Hialeah, FL 33016</string>
    <string name="name_nlast_name_nemail_npayment_nphone_number_ncountry">Name:\nLast Name:\nEmail:\nPayment:\nPhone Number:\nCountry:</string>
    <string name="principal_address">Principal Address:</string>
    <string name="progress">Progress</string>
    <string name="receipt">Receipt</string>
    <string name="registered_agent_name_amp_address">Registered Agent Name &amp; Address:</string>
    <string name="report_year">Report Year</string>
    <string name="total_to_pay">Total to Pay</string>
    <string name="ux_ui_design">UX/UI Design</string>
    <string name="you_have_requested_one_nof_our_services">You have requested one\nof our services</string>
</resources>