<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="730dp">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/color_selected"
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_by_entity_name"
            android:includeFontPadding="true"
            android:fontFamily="@font/sf_pro_semibold"/>
        <TextView
            android:id="@+id/body_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/florida_limited_liability_company_ngodjango_liabilidad_compailidad_company"
            android:includeFontPadding="false"
            android:layout_below="@+id/title_text"
            android:lineSpacingExtra="-2dp"
            android:fontFamily="@font/sf_pro_"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/color_selected"
            android:id="@+id/title_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/filing_information"
            android:includeFontPadding="true"
            android:layout_below="@+id/body_text1"
            android:fontFamily="@font/sf_pro_semibold"/>
        <TextView
            android:id="@+id/body_text3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/document_number_nfe_ein_number_ndate_field_neffective_date_nstate_nstatus"
            android:includeFontPadding="false"
            android:layout_below="@+id/title_text2"
            android:lineSpacingExtra="-2dp"
            android:fontFamily="@font/sf_pro_"/>
        <TextView
            android:id="@+id/body_text4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/l22000314666_n88_3678968_n07_14_2022_n07_14_2022_nfl_nactive"
            android:includeFontPadding="false"
            android:layout_below="@+id/title_text2"
            android:lineSpacingExtra="-2dp"
            android:fontFamily="@font/sf_pro_"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/body_text3"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/color_selected"
            android:id="@+id/title_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/principal_address"
            android:includeFontPadding="true"
            android:layout_below="@+id/body_text3"
            android:fontFamily="@font/sf_pro_semibold"/>
        <TextView
            android:id="@+id/body_text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_710_east_9_st_214_hialeah_fl_33010_nchanged_02_07_2023"
            android:includeFontPadding="false"
            android:layout_below="@+id/title_text3"
            android:lineSpacingExtra="-2dp"
            android:fontFamily="@font/sf_pro_"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/color_selected"
            android:id="@+id/title_text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/mailing_address"
            android:includeFontPadding="true"
            android:layout_below="@+id/body_text5"
            android:fontFamily="@font/sf_pro_semibold"/>
        <TextView
            android:id="@+id/body_text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_710_east_9_st_214_hialeah_fl_33010_nchanged_02_07_2023"
            android:includeFontPadding="false"
            android:layout_below="@+id/title_text4"
            android:lineSpacingExtra="-2dp"
            android:fontFamily="@font/sf_pro_"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/color_selected"
            android:id="@+id/title_text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/registered_agent_name_amp_address"
            android:includeFontPadding="true"
            android:layout_below="@+id/body_text6"
            android:fontFamily="@font/sf_pro_semibold"/>
        <TextView
            android:id="@+id/body_text7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medina_espinoza_itsel_1150_west_79th_st_147_b_hialeah_nfl_33014"
            android:includeFontPadding="false"
            android:layout_below="@+id/title_text5"
            android:lineSpacingExtra="-2dp"
            android:fontFamily="@font/sf_pro_"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/color_selected"
            android:id="@+id/title_text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/authorized_person_s_detail"
            android:includeFontPadding="true"
            android:layout_below="@+id/body_text7"
            android:fontFamily="@font/sf_pro_semibold"/>
        <TextView
            android:id="@+id/body_text8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_amp_address_n_ntitle_ambr_n_nherrera_sosa_enrique_2741_west_79th_st_147_b_hialeah_fl_33016"
            android:includeFontPadding="false"
            android:layout_below="@+id/title_text6"
            android:lineSpacingExtra="-2dp"
            android:fontFamily="@font/sf_pro_"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/color_selected"
            android:id="@+id/title_text7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/annual_reports"
            android:includeFontPadding="true"
            android:layout_below="@+id/body_text8"
            android:fontFamily="@font/sf_pro_semibold"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/color_selected"
            android:id="@+id/title_text8"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:text="@string/report_year"
            android:includeFontPadding="true"
            android:layout_below="@+id/title_text7"
            android:fontFamily="@font/sf_pro_semibold"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/color_selected"
            android:id="@+id/title_text9"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:text="@string/filed_date"
            android:includeFontPadding="true"
            android:layout_below="@+id/title_text7"
            android:fontFamily="@font/sf_pro_semibold"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="21dp"
            android:layout_toEndOf="@+id/title_text8"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/body_text9"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="2023\n2024"
            android:includeFontPadding="false"
            android:layout_below="@+id/title_text8"
            android:lineSpacingExtra="-2dp"
            android:fontFamily="@font/sf_pro_"
            tools:ignore="HardcodedText,VisualLintLongText" />

        <TextView
            android:id="@+id/body_text10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_text8"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/body_text9"
            android:fontFamily="@font/sf_pro_"
            android:includeFontPadding="false"
            android:lineSpacingExtra="-2dp"
            android:text="02/07/2023\n01/31/2024"
            tools:ignore="HardcodedText,VisualLintLongText" />

    </RelativeLayout>
</ScrollView>
