<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/popup_request_background"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:backgroundTint="#d9d9d9">
    <TextView
        android:textSize="15sp"
        android:textColor="@color/active_dot_color"
        android:gravity="center"
        android:id="@+id/Top_Text"
        android:layout_width="119dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:text="@string/you_have_requested_one_nof_our_services"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/sf_pro_semibold"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>
    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="105dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/active_dot_color"
            android:gravity="center"
            android:id="@+id/Text_Receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/receipt"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/sf_pro_semibold"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/active_dot_color"
            android:id="@+id/Text_Campos"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name_nlast_name_nemail_npayment_nphone_number_ncountry"
            android:layout_below="@+id/Text_Receipt"
            android:lineSpacingExtra="2dp"
            android:fontFamily="@font/sf_pro_semibold"
            android:layout_marginStart="30dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/active_dot_color"
            android:id="@+id/Campo_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/carlos_juan_nsanchez_perez_ncarlosjuansp_gmail_com_npaypal_n_1_523_254_5489_nunited_states"
            android:layout_below="@+id/Text_Receipt"
            android:lineSpacingExtra="2dp"
            android:fontFamily="@font/sf_pro_"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/Text_Campos"/>
        <View
            android:id="@+id/horizontalLine"
            android:background="#1a1a3c"
            android:layout_width="117dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/Text_Campos"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/active_dot_color"
            android:id="@+id/Text_Payment"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/amount_paid_nprice_service"
            android:layout_below="@+id/horizontalLine"
            android:lineSpacingExtra="2dp"
            android:fontFamily="@font/sf_pro_semibold"
            android:layout_marginStart="30dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/active_dot_color"
            android:id="@+id/Text_Payment_Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/_10_00_n20_00"
            android:layout_below="@+id/horizontalLine"
            android:lineSpacingExtra="2dp"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/Text_Payment"/>
        <View
            android:id="@+id/horizontalLine2"
            android:background="#1a1a3c"
            android:layout_width="117dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/Text_Payment"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/active_dot_color"
            android:id="@+id/Text_Total"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_to_pay"
            android:layout_below="@+id/horizontalLine2"
            android:fontFamily="@font/sf_pro_semibold"
            android:layout_marginStart="30dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/active_dot_color"
            android:id="@+id/Text_Total_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/_10_00_"
            android:layout_below="@+id/horizontalLine2"
            android:fontFamily="@font/sf_pro_"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/Text_Total"/>
    </RelativeLayout>
    <Button
        android:textSize="15sp"
        android:textColor="@color/white"
        android:id="@+id/Button_Accept_Request"
        android:background="@drawable/button_background"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:text="@string/accept"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:fontFamily="@font/sf_pro_semibold"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:stateListAnimator="@null"
        android:backgroundTint="@color/active_dot_color"/>
</RelativeLayout>
