<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="170dp"
    android:layout_height="170dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#e6e6e6"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/deleteButton"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_papelera"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/active_dot_color"/>
        <ImageView
            android:id="@+id/icon"
            android:layout_width="37dp"
            android:layout_height="46dp"
            android:src="@drawable/ic_appdesign"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.391"
            app:layout_constraintVertical_chainStyle="packed"/>
        <TextView
            android:textSize="13sp"
            android:textColor="@color/color_selected"
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apr_30_2024"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/color_selected"
            android:id="@+id/title"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/app_design"
            android:layout_marginEnd="-10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"/>
        <TextView
            android:textSize="11sp"
            android:textColor="@color/color_selected"
            android:id="@+id/subtitle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/ux_ui_design"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>
        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="36dp"
            android:progress="50"
            android:progressDrawable="@drawable/progress_bar"
            android:thumb="@android:color/transparent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.277"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"/>
        <TextView
            android:textColor="@color/color_selected"
            android:id="@+id/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-3dp"
            android:text="@string/_50"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:textSize="11sp"
            android:textColor="@color/color_selected"
            android:id="@+id/textProgress"
            android:layout_width="53dp"
            android:layout_height="17dp"
            android:layout_marginTop="17dp"
            android:text="@string/progress"
            android:fontFamily="@font/sf_pro_semibold"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
